# orcm

./: LICENSE  VERSION  configure.ac
config/: opal_check_package.m4  orcm_config_files.m4  orte_config_files.m4
contrib/platform/intel/hillsboro/: orcm-fspTest-test.xml  orcm-linux.conf
opal/etc/: Makefile.am
orcm/mca/analytics/base/: analytics_base_frame.c  analytics_base_stubs.c
orcm/mca/db/: db.h
orcm/mca/db/base/: base.h  db_base_frame.c
orcm/mca/db/odbc/: db_odbc.c
orcm/mca/db/postgres/: db_postgres.c
orcm/mca/diag/base/: diag_base_frame.c
orcm/mca/diag/ethtest/: diag_ethtest.c
orcm/mca/evgen/: evgen.h  evgen_types.h
orcm/mca/evgen/base/: base.h  evgen_base_frame.c  evgen_base_stubs.c
orcm/mca/evgen/first/: Makefile.am  evgen_first.c  evgen_first.h  evgen_first_component.c
orcm/mca/sensor/base/: sensor_base_fns.c
orcm/mca/sensor/componentpower/: sensor_componentpower.c
orcm/mca/sensor/coretemp/: sensor_coretemp.c
orcm/mca/sensor/dmidata/: sensor_dmidata.c
orcm/mca/sensor/evinj/: sensor_evinj.c
orcm/mca/sensor/freq/: sensor_freq.c
orcm/mca/sensor/ipmi/: sensor_ipmi.c
orcm/mca/sensor/mcedata/: sensor_mcedata.c
orcm/mca/sensor/nodepower/: sensor_nodepower.c
orcm/mca/sensor/resusage/: sensor_resusage.c
orcm/mca/sensor/sigar/: sensor_sigar.c
orcm/mca/sst/orcmd/: sst_orcmd.c
orcm/runtime/: orcm_globals.h
orcm/tools/: Makefile.am
orcm/tools/ocli/: ocli.c
orcm/tools/octl/: Makefile.am  common.h  octl.c  octl.h  sensor.c
orcm/util/: Makefile.am
