# -*- makefile -*-
#
# Copyright (c) 2013-2014 Intel, Inc. All rights reserved.
#
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

SUBDIRS += \
        tools/ocli \
        tools/octl \
        tools/orcm-info \
        tools/orcmd \
        tools/orcmsched \
        tools/orun \
        tools/osub \
        tools/odiag \
        tools/orcmsd \
        tools/wrappers

DIST_SUBDIRS += \
        tools/ocli \
        tools/octl \
        tools/orcm-info \
        tools/orcmd \
        tools/orcmsched \
        tools/orun \
        tools/osub \
        tools/odiag \
        tools/orcmsd \
        tools/wrappers
